tests/org.eclipse.php.core.tests/workspace/errors/php53/unfinishedClassDecl1.pdtt
--TEST--
Test unfinished class declaration error reporting
--FILE--
<?php
class A {
?>
--EXPECT--
[line=3, start=16, end=19] syntax error, unexpected 'EOF', expecting 'function'